--- a/css/TabBarItem.less
+++ b/css/TabBarItem.less
@@ -77,6 +77,7 @@
 	padding-left: 0.25em ;
 	padding-bottom: 0em ;
 	text-align: center;
+	display:  inline;
 
 	&:hover {
 		box-shadow: 1px 1px 1px black;
