--- a/css/TabBarItem.less
+++ b/css/TabBarItem.less
@@ -70,18 +70,14 @@
 }
 
 .onyx-tab-item-close {
-	font-size: @onyx-font-size-small;
-	border-radius: 1em;
-	margin: 3px;
-	padding: 0.3em ;
-	text-align: center;
-	display:  inline-block;
-	width: 1em;
-	height: 1em;
-	line-height: 1em;
+	display: inline-block;
+	margin-right: 3px;
+	width: 16px;
+	height: 16px;
+	vertical-align: middle;
+	background-repeat: no-repeat;
+	background-image: url('../images/close-inactive.png');
 	&:hover {
-		box-shadow: 1px 1px 1px black;
-		color: white;
-		background-color: rgb(199, 25, 25);
+		background-image: url('../images/close-active.png');
 	}
 }
