--- a/css/onyx.css
+++ b/css/onyx.css
@@ -7,6 +7,9 @@
 /* LESS file.                                                               */
 
 /* Onyx default parameters defined here */
+/* Paths */
+/* application importing Onyx Less files will have to override this  */
+/* variable. Otherwise Onyx images won't be loaded with a 404 error  */
 /* Fonts */
 /* ---------------------------------------*/
 /* Text Colors */
@@ -98,7 +101,7 @@
   /* border-bottom: 1px solid rgba(15, 15, 15, 0.5); */
 
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.2);
-  background: #e1e1e1 url(../images/gradient.png) repeat-x bottom;
+  background: #e1e1e1 url("../images/gradient.png") repeat-x bottom;
   background-size: contain;
   /**/
 
@@ -119,13 +122,13 @@
 */
 .onyx-button.active,
 .onyx-button.pressed {
-  background-image: url(../images/gradient-invert.png);
+  background-image: url("../images/gradient-invert.png");
   background-position: top;
   border-top: 1px solid rgba(15, 15, 15, 0.6);
   box-shadow: inset 0px 1px 0px rgba(0, 0, 0, 0.1);
 }
 .onyx-button:active:hover:not([disabled]) {
-  background-image: url(../images/gradient-invert.png);
+  background-image: url("../images/gradient-invert.png");
   background-position: top;
   border-top: 1px solid rgba(15, 15, 15, 0.6);
   box-shadow: inset 0px 1px 0px rgba(0, 0, 0, 0.1);
@@ -146,7 +149,7 @@
   cursor: pointer;
   height: 32px;
   width: 32px;
-  background: url(../images/checkbox.png) no-repeat;
+  background: url("../images/checkbox.png") no-repeat;
   /* reset for ? */
 
   margin: 0px;
@@ -163,7 +166,7 @@
 }
 /* Grabber.css */
 .onyx-grabber {
-  background: url(../images/grabbutton.png) no-repeat center;
+  background: url("../images/grabbutton.png") no-repeat center;
   width: 23px;
   height: 27px;
 }
@@ -175,7 +178,7 @@
   border-radius: 8px;
   padding: 6px;
   color: #ffffff;
-  background: #4c4c4c url(../images/gradient.png) repeat-x 0 bottom;
+  background: #4c4c4c url("../images/gradient.png") repeat-x 0 bottom;
 }
 .onyx-popup-decorator {
   position: relative;
@@ -217,7 +220,7 @@
 
   background-color: #4c4c4c;
   border: none;
-  background: #4c4c4c url(../images/gradient.png) repeat-x 0 10px;
+  background: #4c4c4c url("../images/gradient.png") repeat-x 0 10px;
 }
 .onyx-groupbox .onyx-input-decorator {
   display: block;
@@ -339,7 +342,7 @@
 }
 /* Submenu.css */
 .onyx-submenu {
-  background: rgba(0, 0, 0, 0.25) url(../images/gradient-invert.png) repeat-x 0 top;
+  background: rgba(0, 0, 0, 0.25) url("../images/gradient-invert.png") repeat-x 0 top;
 }
 /* Picker.css */
 .onyx-picker-decorator .onyx-button {
@@ -455,7 +458,7 @@
   text-align: center;
   /**/
 
-  background: #e7e7e7 url(../images/gradient.png) repeat-x bottom;
+  background: #e7e7e7 url("../images/gradient.png") repeat-x bottom;
   /* IE8 */
 
   border: 1px solid #333333;
@@ -477,7 +480,7 @@
 }
 .onyx-radiobutton.active {
   color: #ffffff;
-  background: #0091f2 url(../images/gradient-invert.png) repeat-x top;
+  background: #0091f2 url("../images/gradient-invert.png") repeat-x top;
   border-top: 1px solid rgba(15, 15, 15, 0.6);
   box-shadow: inset 1px 2px 2px rgba(0, 0, 0, 0.2);
 }
@@ -662,7 +665,7 @@
 
   border-radius: 3px;
   box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.4);
-  background: #8bba3d url(../images/gradient-invert.png) repeat-x bottom;
+  background: #8bba3d url("../images/gradient-invert.png") repeat-x bottom;
   background-size: auto 100%;
   /* label */
 
@@ -680,7 +683,7 @@
   height: 30px;
   margin: 1px;
   border-radius: 3px;
-  background: #f6f6f6 url(../images/gradient.png) repeat-x;
+  background: #f6f6f6 url("../images/gradient.png") repeat-x;
   background-size: auto 100%;
 }
 .onyx-toggle-button .onyx-toggle-button-knob {
@@ -720,7 +723,7 @@
 
   padding: 9px 8px 10px 8px;
   border: 1px solid #3A3A3A;
-  background: #4c4c4c url(../images/gradient.png) repeat-x 0 bottom;
+  background: #4c4c4c url("../images/gradient.png") repeat-x 0 bottom;
   background-size: contain;
   color: #ffffff;
   /**/
@@ -777,7 +780,7 @@
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(0, 0, 0, 0.2);
   color: #ffffff;
-  background: #216593 url(../images/gradient.png) repeat-x 0 bottom;
+  background: #216593 url("../images/gradient.png") repeat-x 0 bottom;
   border-radius: 3px;
   white-space: nowrap;
 }
@@ -834,13 +837,13 @@
   height: 8px;
   border: 1px solid rgba(15, 15, 15, 0.2);
   border-radius: 3px;
-  background: #b8b8b8 url(../images/gradient-invert.png) repeat-x;
+  background: #b8b8b8 url("../images/gradient-invert.png") repeat-x;
   background-size: auto 100%;
 }
 .onyx-progress-bar-bar {
   height: 100%;
   border-radius: 3px;
-  background: #58abef url(../images/gradient.png) repeat-x;
+  background: #58abef url("../images/gradient.png") repeat-x;
   background-size: auto 100%;
 }
 .onyx-progress-bar-bar.striped {
@@ -934,7 +937,7 @@
   position: relative;
   height: 40px;
   width: 40px;
-  background: url(../images/slider-handle.png) left top no-repeat;
+  background: url("../images/slider-handle.png") left top no-repeat;
   margin: -23px -20px;
 }
 .onyx-slider-knob.active,
@@ -979,10 +982,10 @@
   width: 59px;
   height: 58px;
   display: inline-block;
-  background: url(../images/spinner-dark.gif) no-repeat 0 0;
+  background: url("../images/spinner-dark.gif") no-repeat 0 0;
 }
 .onyx-spinner.onyx-light {
-  background: url(../images/spinner-light.gif) no-repeat 0 0;
+  background: url("../images/spinner-light.gif") no-repeat 0 0;
 }
 /* MoreToolbar.css */
 .onyx-more-toolbar {
@@ -1006,7 +1009,7 @@
   margin-bottom: 5px;
 }
 .onyx-more-button {
-  background-image: url(../images/more.png);
+  background-image: url("../images/more.png");
   width: 32px;
   height: 32px;
 }
