image-path-in-less: clarified comment

--- a/css/onyx-variables.less
+++ b/css/onyx-variables.less
@@ -1,6 +1,6 @@
 /* Paths */
 /* application importing Onyx Less files will have to override this  */
-/* variable. Otherwise Onyx images won't be loaded with a 404 error  */
+/* variable. Otherwise, Onyx image load will fail with a 404 error  */
 @onyx-image-path: '../images';
 
 
