--- a/css/TabBar.less
+++ b/css/TabBar.less
@@ -7,7 +7,7 @@
 
 
 .onyx-tab-bar {
-	display: block;
+	width: 100%;
 	position: relative;
 	z-index: 0;
 	background-color: @onyx-light-background;
